--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-09 Tue 15:56 -->
+<!-- 2024-01-11 Thu 09:45 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -52,10 +52,9 @@ table {
   <div>
 
 
-<figure id="org9cfd16d">
-<img src="./img/2022.jpg" alt="2022.jpg">
+<figure id="org75afa69">
+<img src="./img/raab_headshot.jpg" alt="raab_headshot.jpg">
 
-<figcaption><span class="figure-number">Figure 1: </span>Me (in red).</figcaption>
 </figure>
 
 <p>
@@ -64,7 +63,7 @@ table {
 </p>
 
 <p>
-Ph.D. Candidate <br>
+Ph.D. Candidate (Graduating March 2024) <br>
 in <a href="https://www.soe.ucsc.edu/departments/computer-science-and-engineering">Computer Science and Engineering</a> <br>
 at <a href="https://en.wikipedia.org/wiki/University_of_California,_Santa_Cruz">UC Santa Cruz</a> <br>
 advised by <a href="http://www.yliuu.com">Yang Liu</a>
@@ -130,7 +129,7 @@ My resume is also available as a <a href="./files/reilly-raab-resume.pdf">PDF</a
 </p>
 <div id="outline-container-Summary" class="outline-2">
 <h2 id="Summary">Summary</h2>
-<div class="outline-text-2" id="text-org88a5df2">
+<div class="outline-text-2" id="text-orge06f1c8">
 <p>
 My current research in machine learning involves the dynamics of multi-agent
 systems and the alignment of local incentives with global objectives. My
@@ -143,7 +142,7 @@ related to automated circuit design.
 </div>
 <div id="outline-container-Research-Interests" class="outline-2">
 <h2 id="Research-Interests">Research Interests</h2>
-<div class="outline-text-2" id="text-orgb1b16d2">
+<div class="outline-text-2" id="text-org91dcf50">
 <ul class="org-ul">
 <li>I strongly suspect that the next generation of &ldquo;Artificial Intelligence&rdquo; will
 not be focused on single models, but on multi-agent systems understood in terms
@@ -163,7 +162,7 @@ sophomoric concern with the <a href="https://en.wikipedia.org/wiki/Measurement_p
 </div>
 <div id="outline-container-Skills" class="outline-2">
 <h2 id="Skills">Skills</h2>
-<div class="outline-text-2" id="text-org8bebbdb">
+<div class="outline-text-2" id="text-org0dbe43e">
 <table>
 
 
@@ -193,7 +192,7 @@ sophomoric concern with the <a href="https://en.wikipedia.org/wiki/Measurement_p
 </div>
 <div id="outline-container-Education" class="outline-2">
 <h2 id="Education">Education</h2>
-<div class="outline-text-2" id="text-orgb2683c1">
+<div class="outline-text-2" id="text-org2de0763">
 
 <div class="cv-block">
 <table>
@@ -241,7 +240,7 @@ sophomoric concern with the <a href="https://en.wikipedia.org/wiki/Measurement_p
 </div>
 <div id="outline-container-Work-amp-Research-Experience" class="outline-2">
 <h2 id="Work-amp-Research-Experience">Work &amp; Research Experience</h2>
-<div class="outline-text-2" id="text-org1e589a6">
+<div class="outline-text-2" id="text-orgf454112">
 
 <div class="cv-block">
 <table>
@@ -367,7 +366,7 @@ With a paid undergraduate research internship awarded by the UC Santa Barbara Ce
 </div>
 <div id="outline-container-Awards" class="outline-2">
 <h2 id="Awards">Awards</h2>
-<div class="outline-text-2" id="text-org8876f30">
+<div class="outline-text-2" id="text-orgc39ad91">
 <table class='awards'>
 <tr>
 <td class="awards-a">Dissertation Year Fellowship (Winter)</td>
@@ -443,7 +442,7 @@ With a paid undergraduate research internship awarded by the UC Santa Barbara Ce
 </div>
 <div id="outline-container-Publications" class="outline-2">
 <h2 id="Publications">Publications</h2>
-<div class="outline-text-2" id="text-orgc98ed4e">
+<div class="outline-text-2" id="text-org199a52e">
 <p>
 {7} Fair Participation via Sequential Policies <br>
 <strong>Reilly Raab</strong>, Ross Boczar, Maryam Fazel, and Yang Liu <br>
