--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-04 Wed 10:36 -->
+<!-- 2024-01-11 Thu 09:38 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>HTML Demo &amp; Reference</title>
@@ -45,7 +45,7 @@
 </nav>
 <div id="outline-container-Text-Decoration" class="outline-2">
 <h2 id="Text-Decoration">Text Decoration</h2>
-<div class="outline-text-2" id="text-org01c6145">
+<div class="outline-text-2" id="text-org6e3fd7f">
 <p>
 Words may be <strong>bold</strong>, <em>italic</em>, <span class="underline">underlined</span>, <kbd>verbatim</kbd>, <samp>monospace</samp>, or
 <del>strike-through</del>.
@@ -60,7 +60,7 @@ Words may be <strong>bold</strong>, <em>italic</em>, <span class="underline">und
 </div>
 <div id="outline-container-Images" class="outline-2">
 <h2 id="Images">Images</h2>
-<div class="outline-text-2" id="text-org18eeba3">
+<div class="outline-text-2" id="text-org312a149">
 <div class="org-src-container">
 <pre class="src src-org"><span style="color: #83898d;">#+CAPTION:</span> <span style="background-color: #23272e;">Caption goes here. Click for fullscreen.</span>
 <span style="color: #ECBE7B; font-weight: bold; text-decoration: underline;"><a href="./img/2015.jpg">./img/2015.jpg</a></span>
@@ -68,7 +68,7 @@ Words may be <strong>bold</strong>, <em>italic</em>, <span class="underline">und
 </div>
 
 
-<figure id="org4b4ee5f">
+<figure id="orge0af6d1">
 <img src="./img/2015.jpg" alt="2015.jpg">
 
 <figcaption><span class="figure-number">Figure 1: </span>Caption goes here. Click for fullscreen.</figcaption>
@@ -77,7 +77,7 @@ Words may be <strong>bold</strong>, <em>italic</em>, <span class="underline">und
 </div>
 <div id="outline-container-Source-Code" class="outline-2">
 <h2 id="Source-Code">Source Code</h2>
-<div class="outline-text-2" id="text-orge73b63c">
+<div class="outline-text-2" id="text-org6891137">
 <div class="org-src-container">
 <pre class="src src-org"><span style="color: #5B6268; background-color: #23272e;">#+begin_src python</span>
 <span style="color: #51afef; background-color: #23272e;">def</span><span style="background-color: #23272e;"> </span><span style="color: #c678dd; background-color: #23272e;">lazy</span><span style="background-color: #23272e;">(f):</span>
@@ -110,7 +110,7 @@ Output:
 </div>
 <div id="outline-container-Math" class="outline-2">
 <h2 id="Math">Math</h2>
-<div class="outline-text-2" id="text-orgfb82b1f">
+<div class="outline-text-2" id="text-org9d54050">
 <p>
 Math is rendered <em>server-side</em> using <a href="https://katex.org/"><!--\KaTeX-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mtext>KaTeX</mtext></mrow><annotation encoding="application/x-tex">\KaTeX</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8988em;vertical-align:-0.2155em;"></span><span class="mord text"><span class="mord textrm">K</span><span class="mspace" style="margin-right:-0.17em;"></span><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.6833em;"><span style="top:-2.905em;"><span class="pstrut" style="height:2.7em;"></span><span class="mord"><span class="mord textrm mtight sizing reset-size6 size3">A</span></span></span></span></span></span><span class="mspace" style="margin-right:-0.15em;"></span><span class="mord text"><span class="mord textrm">T</span><span class="mspace" style="margin-right:-0.1667em;"></span><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.4678em;"><span style="top:-2.7845em;"><span class="pstrut" style="height:3em;"></span><span class="mord"><span class="mord textrm">E</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.2155em;"><span></span></span></span></span><span class="mspace" style="margin-right:-0.125em;"></span><span class="mord textrm">X</span></span></span></span></span></span></a>.
@@ -169,7 +169,7 @@ value <!--\phi-->
 </div>
 <div id="outline-container-Internal-Links" class="outline-2">
 <h2 id="Internal-Links">Internal Links</h2>
-<div class="outline-text-2" id="text-org8438581">
+<div class="outline-text-2" id="text-orga287061">
 <p>
 Standard internal link:
 </p>
@@ -195,7 +195,7 @@ Using general link syntax:
 </div>
 <div id="outline-container-Wikipedia-Links" class="outline-2">
 <h2 id="Wikipedia-Links">Wikipedia Links</h2>
-<div class="outline-text-2" id="text-orgcdfa111">
+<div class="outline-text-2" id="text-orgfb98e59">
 <div class="org-src-container">
 <pre class="src src-org">Links to [&#8203;[ht&#8203;tps://en.wikipedia.org/wiki/Wikipedia][Wikipedia]] pages will
 display summaries when hovered over.
@@ -209,7 +209,7 @@ Links to <a href="https://en.wikipedia.org/wiki/Wikipedia">Wikipedia</a> pages w
 </div>
 <div id="outline-container-Foot-notes" class="outline-2">
 <h2 id="Foot-notes">Foot​notes</h2>
-<div class="outline-text-2" id="text-orga2ddbe8">
+<div class="outline-text-2" id="text-org00b6341">
 <div class="org-src-container">
 <pre class="src src-org">Sometimes you don't need footnotes...<span style="color: #da8548;">[fn:1]</span>
 
@@ -234,7 +234,7 @@ definition or headline, or after two consecutive empty lines (<a href="https://o
 </div>
 <div id="outline-container-Block-Quotes" class="outline-2">
 <h2 id="Block-Quotes">Block Quotes</h2>
-<div class="outline-text-2" id="text-org94dc0e3">
+<div class="outline-text-2" id="text-org50f5e6e">
 <div class="org-src-container">
 <pre class="src src-org"><span style="color: #5B6268; background-color: #23272e;">#+begin_quote</span>
 <span style="background-color: #23272e; font-style: italic;">There was only one catch and that was Catch-22, which specified that a concern</span>
@@ -265,7 +265,7 @@ would have to fly more missions.
 </div>
 <div id="outline-container-Tables" class="outline-2">
 <h2 id="Tables">Tables</h2>
-<div class="outline-text-2" id="text-org078e4c1">
+<div class="outline-text-2" id="text-orgb2c655b">
 <p>
 I don&rsquo;t use org-mode for tables. The feature-set is limited (<em>e.g.</em>, cells
 spanning multiple columns). At the moment, I write tables in <a href="#Raw-HTML">Raw HTML</a> or
@@ -275,7 +275,7 @@ using <a href="#Inline-Lisp">Inline Lisp</a>.
 </div>
 <div id="outline-container-Raw-HTML" class="outline-2">
 <h2 id="Raw-HTML">Raw HTML</h2>
-<div class="outline-text-2" id="text-orga1ff226">
+<div class="outline-text-2" id="text-org799ea72">
 Arbitrary <button>HTML</button> can go here.
 
 <div class="org-src-container">
@@ -297,7 +297,7 @@ Inline <button>HTML</button> is also possible.
 </div>
 <div id="outline-container-Scripts-Style-Meta" class="outline-2">
 <h2 id="Scripts-Style-Meta">Scripts, Style, Meta</h2>
-<div class="outline-text-2" id="text-orgb2c2efc">
+<div class="outline-text-2" id="text-orgb9a321e">
 <p>
 Individual source files can provide additional material to include in the
 <samp>&lt;head&gt;</samp> of the exported HTML document. For example,
@@ -314,7 +314,7 @@ Individual source files can provide additional material to include in the
 </div>
 <div id="outline-container-Inline-Lisp" class="outline-2">
 <h2 id="Inline-Lisp">Inline Lisp</h2>
-<div class="outline-text-2" id="text-org85a7a2d">
+<div class="outline-text-2" id="text-org7247af6">
 <p>
 We can include blocks of lisp that don&rsquo;t get rendered to HTML output (as
 syntax-highlighted <a href="#Source-Code">source code</a>), but instead define functions
