--- a/euler-lagrange.html
+++ b/euler-lagrange.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-04 Wed 10:41 -->
+<!-- 2024-01-11 Thu 09:38 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Calculus of Variations</title>
@@ -34,7 +34,7 @@ Relevant Wikipedia Articles:
 </ul>
 <div id="outline-container-Local-Lagrangian-Densities" class="outline-2">
 <h2 id="Local-Lagrangian-Densities">Local Lagrangian Densities</h2>
-<div class="outline-text-2" id="text-org310b755">
+<div class="outline-text-2" id="text-org3b314c5">
 <p>
 Extremize over <!--f \colon \mathcal{X} \to \mathbb{R}-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>f</mi><mspace></mspace><mspace width="0.1111em"/><mo lspace="0em" rspace="0.17em"></mo><mtext> ⁣</mtext><mo lspace="0em" rspace="0em">:</mo><mspace width="0.3333em"/><mi mathvariant="script">X</mi><mo>→</mo><mi mathvariant="double-struck">R</mi></mrow><annotation encoding="application/x-tex">f \colon \mathcal{X} \to \mathbb{R}</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8889em;vertical-align:-0.1944em;"></span><span class="mord mathnormal" style="margin-right:0.10764em;">f</span><span class="mspace nobreak"></span><span class="mspace" style="margin-right:0.1111em;"></span><span class="mpunct"></span><span class="mspace" style="margin-right:-0.1667em;"></span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord"><span class="mrel">:</span></span><span class="mspace" style="margin-right:0.3333em;"></span><span class="mord mathcal" style="margin-right:0.14643em;">X</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">→</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.6889em;"></span><span class="mord mathbb">R</span></span></span></span>, where <!--x \in \mathcal{X}-->
@@ -107,7 +107,7 @@ for all permissible <!--g-->
 </div>
 <div id="outline-container-Non-Local-Lagrangian-Densities" class="outline-2">
 <h2 id="Non-Local-Lagrangian-Densities">Non-Local Lagrangian Densities</h2>
-<div class="outline-text-2" id="text-org37992f4">
+<div class="outline-text-2" id="text-orge779257">
 <p>
 Consider now a situation in which the Lagrangian density <!--\mathcal{L}-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi mathvariant="script">L</mi></mrow><annotation encoding="application/x-tex">\mathcal{L}</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathcal">L</span></span></span></span> depends
@@ -187,7 +187,7 @@ where <!--\delta-->
 </div>
 <div id="outline-container-A-Sanity-Check" class="outline-3">
 <h3 id="A-Sanity-Check">A Sanity Check</h3>
-<div class="outline-text-3" id="text-orge28cfd4">
+<div class="outline-text-3" id="text-org7498a39">
 <p>
 Consider the problem
 <!-- \min \int_{-\infty}^{\infty} \underbrace{\frac{1}{2}\Big( f(x) + f^{\prime}(x-\pi/2) \Big)^{2}}_{\mathcal{L}(x, f, f^{\prime})} {\rm d}x. -->
