--- a/gradient-descent.html
+++ b/gradient-descent.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-19 Thu 21:06 -->
+<!-- 2024-01-11 Thu 09:37 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Beyond Gradient Descent</title>
@@ -126,7 +126,7 @@ In the following sections, I give examples of each of these generalizations.
 </p>
 <div id="outline-container-Pseudo-Riemannian-Geometry" class="outline-2">
 <h2 id="Pseudo-Riemannian-Geometry">Pseudo-Riemannian Geometry</h2>
-<div class="outline-text-2" id="text-orgd192774">
+<div class="outline-text-2" id="text-org0bad524">
 <p>
 Let us consider linear approximations of the form
 </p>
@@ -187,7 +187,7 @@ time-derivative.
 </div>
 <div id="outline-container-Gauss-Newton" class="outline-3">
 <h3 id="Gauss-Newton">Gauss-Newton</h3>
-<div class="outline-text-3" id="text-org62da3ac">
+<div class="outline-text-3" id="text-org33ea3df">
 <p>
 If our objective function <!--f-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>f</mi></mrow><annotation encoding="application/x-tex">f</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8889em;vertical-align:-0.1944em;"></span><span class="mord mathnormal" style="margin-right:0.10764em;">f</span></span></span></span> is <em>convex</em>, we are guaranteed that the Hessian
@@ -228,7 +228,7 @@ models, the second term is identically zero.
 </div>
 <div id="outline-container-Fisher-Rao" class="outline-3">
 <h3 id="Fisher-Rao">Fisher-Rao</h3>
-<div class="outline-text-3" id="text-org3140866">
+<div class="outline-text-3" id="text-org7813da7">
 <p>
 We may also choose values of <!--G-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal">G</span></span></span></span> that derive from spaces other than
@@ -286,7 +286,7 @@ other forms of &ldquo;natural gradient descent&rdquo;
 </div>
 <div id="outline-container-Projective-Geometry" class="outline-3">
 <h3 id="Projective-Geometry">Projective Geometry</h3>
-<div class="outline-text-3" id="text-org840033b">
+<div class="outline-text-3" id="text-orgc95c4a6">
 <p>
 Vanilla gradient descent does not <em>require</em> a Euclidean metric.
 </p>
@@ -315,7 +315,7 @@ Therefore, the update rule that solves <!--\nabla(\hat{f}_{t} + D_{t}) = 0-->
 </div>
 <div id="outline-container-Multi-iterate-Methods" class="outline-2">
 <h2 id="Multi-iterate-Methods">Multi-iterate Methods</h2>
-<div class="outline-text-2" id="text-org835820e">
+<div class="outline-text-2" id="text-orgef3cff3">
 <p>
 So far, we have only discussed updates that rely on at most one previous iterate
 of <!--x_{t}-->
@@ -332,7 +332,7 @@ penalties that rely on additional history of the solution candidates <!--(x_{t},
 </div>
 <div id="outline-container-Momentum" class="outline-3">
 <h3 id="Momentum">Momentum</h3>
-<div class="outline-text-3" id="text-org7cb61c7">
+<div class="outline-text-3" id="text-orga5425c6">
 <p>
 An example of a multi-iterate approach is given by the classical &ldquo;Momentum&rdquo;
 variant of gradient descent. Consider, for example, a penalty term <!--D_{t}-->
@@ -381,7 +381,7 @@ with decay parameterized by <!--\xi-->
 </div>
 <div id="outline-container-Nth-Order-Regularization" class="outline-3">
 <h3 id="Nth-Order-Regularization">Nth-Order Regularization</h3>
-<div class="outline-text-3" id="text-org4836c15">
+<div class="outline-text-3" id="text-org7d2610d">
 <p>
 There is yet another update penalty <!--D_{t}-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msub><mi>D</mi><mi>t</mi></msub></mrow><annotation encoding="application/x-tex">D_{t}</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8333em;vertical-align:-0.15em;"></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.02778em;">D</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.2806em;"><span style="top:-2.55em;margin-left:-0.0278em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight"><span class="mord mathnormal mtight">t</span></span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span></span></span></span> that may be used to derive the
@@ -437,7 +437,7 @@ the standard momentum update.
 </div>
 <div id="outline-container-Surrogate-Approximation" class="outline-2">
 <h2 id="Surrogate-Approximation">Surrogate Approximation</h2>
-<div class="outline-text-2" id="text-orgab6268c">
+<div class="outline-text-2" id="text-orge56800e">
 <p>
 As <!--x-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.4306em;"></span><span class="mord mathnormal">x</span></span></span></span> varies from <!--x_{t}-->
@@ -457,7 +457,7 @@ of <!--f-->
 </div>
 <div id="outline-container-Nesterov-Acceleration" class="outline-3">
 <h3 id="Nesterov-Acceleration">Nesterov Acceleration</h3>
-<div class="outline-text-3" id="text-org09dcc65">
+<div class="outline-text-3" id="text-orgdf18377">
 <p>
 When using <a href="#eqn-8">Eq. (8)</a>, one &ldquo;zero-cost&rdquo; (i.e., if we decouple candidate
 solutions <!--x_{t}-->
@@ -485,7 +485,7 @@ gradient descent with momentum:
 </div>
 <div id="outline-container-Dealing-with-Constraints" class="outline-2">
 <h2 id="Dealing-with-Constraints">Dealing with Constraints</h2>
-<div class="outline-text-2" id="text-org930d2c0">
+<div class="outline-text-2" id="text-org1744fc1">
 <p>
 Consider the basic (constrained) optimization problem
 </p>
@@ -530,7 +530,7 @@ Within this &ldquo;feasible set&rdquo; of <!--x-->
 </div>
 <div id="outline-container-Primal-Dual" class="outline-3">
 <h3 id="Primal-Dual">Primal-Dual</h3>
-<div class="outline-text-3" id="text-org6480c60">
+<div class="outline-text-3" id="text-org512c199">
 <p>
 We may iteratively approximate <a href="#eqn-12">Eq. (12)</a> with a sequence of subproblems in the form of <a href="#eqn-2">Eq. (2)</a>:
 </p>
@@ -617,7 +617,7 @@ constrained optimization problem <a href="#eqn-12">Eq. (12)</a>.
 </div>
 <div id="outline-container-Generalizing-Fletcher-rsquo-s-Method" class="outline-3">
 <h3 id="Generalizing-Fletcher-rsquo-s-Method">Generalizing Fletcher&rsquo;s Method</h3>
-<div class="outline-text-3" id="text-orgfff9dff">
+<div class="outline-text-3" id="text-org4f77cd6">
 <p>
 In this section, we show how a rather interesting penalty choice for the dual
 variable <!--\lambda-->
@@ -720,7 +720,7 @@ towards decreasing the objective <!--f-->
 </div>
 <div id="outline-container-References" class="outline-2">
 <h2 id="References">References</h2>
-<div class="outline-text-2" id="text-org198343c">
+<div class="outline-text-2" id="text-orge32f28d">
 <ul class="org-ul">
 <li><a href="https://arxiv.org/abs/2208.13898">Conjugate Natural Selection. Raab et. al. (2022)</a></li>
 <li><a href="https://arxiv.org/abs/2202.06236">Efficient Natural Gradient Descent Methods for Large-Scale PDE-Based Optimization Problems. Nurbekyan et. al. (2022)</a></li>
