--- a/ito.html
+++ b/ito.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-04 Wed 10:42 -->
+<!-- 2024-01-11 Thu 09:38 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Stochastic Calculus</title>
@@ -49,7 +49,7 @@
 </nav>
 <div id="outline-container-Sum-of-Centered-Gaussians" class="outline-2">
 <h2 id="Sum-of-Centered-Gaussians">Sum of Centered Gaussians</h2>
-<div class="outline-text-2" id="text-org922d625">
+<div class="outline-text-2" id="text-orgf3893e0">
 <p>
 Consider the sum of two independent random variables <!--X-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.07847em;">X</span></span></span></span> and <!--Y-->
@@ -74,7 +74,7 @@ and the variance of <!--Y-->
 </div>
 <div id="outline-container-A-Continuous-Random-Walk" class="outline-2">
 <h2 id="A-Continuous-Random-Walk">A Continuous Random Walk</h2>
-<div class="outline-text-2" id="text-orgbdef8c1">
+<div class="outline-text-2" id="text-org01094a3">
 <p>
 Imagine a <em>continuous-time</em> random walk <!--W(t)-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>W</mi><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">W(t)</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord mathnormal" style="margin-right:0.13889em;">W</span><span class="mopen">(</span><span class="mord mathnormal">t</span><span class="mclose">)</span></span></span></span> for which observed
@@ -110,7 +110,7 @@ For positive, infinitesimal differences in time, we may write
 </div>
 <div id="outline-container-Quadratic-Variation" class="outline-2">
 <h2 id="Quadratic-Variation">Quadratic Variation</h2>
-<div class="outline-text-2" id="text-orgfebf372">
+<div class="outline-text-2" id="text-orgd9e3d6e">
 <p>
 If we consider infinitesimal differences in time and recall that, for any
 random variable <!--Z-->
@@ -136,7 +136,7 @@ variation in <!--W-->
 </div>
 <div id="outline-container-Drift-Diffusion-Processes" class="outline-2">
 <h2 id="Drift-Diffusion-Processes">Drift-Diffusion Processes</h2>
-<div class="outline-text-2" id="text-org25a3da8">
+<div class="outline-text-2" id="text-org0b96d56">
 <p>
 An Itô drift-diffusion process may be represented in terms of differentials in
 <!--t-->
@@ -161,7 +161,7 @@ and variance, respectively, in this example for <!--\frac{{\rm d}X}{{\rm d} t}--
 </div>
 <div id="outline-container-It-rsquo-s-Lemma" class="outline-3">
 <h3 id="It-rsquo-s-Lemma">Itô&rsquo;s Lemma</h3>
-<div class="outline-text-3" id="text-org383f689">
+<div class="outline-text-3" id="text-orge512936">
 <p>
 Twice-differentiable functions applied to drift-diffusion stochastic processes
 also define drift-diffusion stochastic processes. For example, given a
@@ -192,7 +192,7 @@ classical chain rule:
 </div>
 <div id="outline-container-Geometric-Brownian-Motion" class="outline-2">
 <h2 id="Geometric-Brownian-Motion">Geometric Brownian Motion</h2>
-<div class="outline-text-2" id="text-orgcd60a38">
+<div class="outline-text-2" id="text-org56c76ae">
 <p>
 Consider a stochastic process <!--X-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.07847em;">X</span></span></span></span> for which the <em>proportional growth</em>
@@ -215,7 +215,7 @@ We provide two means of solving for <!--X(t)-->
 </div>
 <div id="outline-container-By-It-rsquo-s-Lemma" class="outline-3">
 <h3 id="By-It-rsquo-s-Lemma">By Itô&rsquo;s Lemma</h3>
-<div class="outline-text-3" id="text-orgf0e3998">
+<div class="outline-text-3" id="text-org0573457">
 <p>
 First, we consider mapping mapping geometric Brownian motion by the function <!--f = \log x-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>f</mi><mo>=</mo><mi>log</mi><mo>⁡</mo><mi>x</mi></mrow><annotation encoding="application/x-tex">f = \log x</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8889em;vertical-align:-0.1944em;"></span><span class="mord mathnormal" style="margin-right:0.10764em;">f</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.8889em;vertical-align:-0.1944em;"></span><span class="mop">lo<span style="margin-right:0.01389em;">g</span></span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord mathnormal">x</span></span></span></span>.
@@ -250,7 +250,7 @@ Substituting <!--X(t) = e^{f(t)}-->
 </div>
 <div id="outline-container-By-Quadratic-Variation" class="outline-3">
 <h3 id="By-Quadratic-Variation">By Quadratic Variation</h3>
-<div class="outline-text-3" id="text-org4707135">
+<div class="outline-text-3" id="text-org16cdf9d">
 <p>
 Another approach is to note that both the definition of geometric Brownian
 motion (<a href="#eqn-5">Eq. (5)</a>) and a Taylor expansion of <!--X-->
@@ -282,7 +282,7 @@ arrive at the unique solution
 </div>
 <div id="outline-container-Properties" class="outline-3">
 <h3 id="Properties">Properties</h3>
-<div class="outline-text-3" id="text-org9dd125b">
+<div class="outline-text-3" id="text-org85e7e93">
 <p>
 Noting that <!--X(t)-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>X</mi><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">X(t)</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord mathnormal" style="margin-right:0.07847em;">X</span><span class="mopen">(</span><span class="mord mathnormal">t</span><span class="mclose">)</span></span></span></span> describes a <a href="https://en.wikipedia.org/wiki/Log-normal_distribution">Galton distribution</a>, it follows that
@@ -293,7 +293,7 @@ Noting that <!--X(t)-->
 </div>
 <div id="outline-container--em-vs-em-Discrete-Time" class="outline-3">
 <h3 id="-em-vs-em-Discrete-Time"><em>vs</em> Discrete-Time</h3>
-<div class="outline-text-3" id="text-orgdd80fce">
+<div class="outline-text-3" id="text-org17e4d0f">
 <p>
 Imagine investing in a security <!--X-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.07847em;">X</span></span></span></span>, the valuation of which (<em>e.g.</em>, relative
