--- a/reading-list.html
+++ b/reading-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-12-27 Wed 14:27 -->
+<!-- 2024-01-11 Thu 09:38 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Digital Bookshelf</title>
@@ -66,11 +66,11 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </p>
 <div id="outline-container-Math-and-Science" class="outline-2">
 <h2 id="Math-and-Science">Math and Science</h2>
-<div class="outline-text-2" id="text-org133a524">
+<div class="outline-text-2" id="text-org358f216">
 </div>
 <div id="outline-container-Physics" class="outline-3">
 <h3 id="Physics">Physics</h3>
-<div class="outline-text-3" id="text-org47f7a04">
+<div class="outline-text-3" id="text-orge81edde">
 <table>
   <tr>
     <td colspan="3">
@@ -122,7 +122,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </div>
 <div id="outline-container-Computer-Science" class="outline-3">
 <h3 id="Computer-Science">Computer Science</h3>
-<div class="outline-text-3" id="text-orgbe63f5a">
+<div class="outline-text-3" id="text-orgf81c657">
 <table>
   <tr>
     <td colspan="3">
@@ -174,7 +174,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </div>
 <div id="outline-container-Mathematics" class="outline-3">
 <h3 id="Mathematics">Mathematics</h3>
-<div class="outline-text-3" id="text-org5846bbc">
+<div class="outline-text-3" id="text-org37ec73c">
 <table>
   <tr>
     <td> <a href="https://www.youtube.com/playlist?list=PLMrJAkhIeNNR20Mz-VpzgfQs5zrYi085m">Control Bootcamp</a></td>
@@ -191,7 +191,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </div>
 <div id="outline-container-General" class="outline-3">
 <h3 id="General">General</h3>
-<div class="outline-text-3" id="text-orgc693fd9">
+<div class="outline-text-3" id="text-org36d64f9">
 <table>
    <tr>
     <td colspan="3">
@@ -219,11 +219,11 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </div>
 <div id="outline-container-Humanities" class="outline-2">
 <h2 id="Humanities">Humanities</h2>
-<div class="outline-text-2" id="text-org8582854">
+<div class="outline-text-2" id="text-orgb554628">
 </div>
 <div id="outline-container-Anthropology" class="outline-3">
 <h3 id="Anthropology">Anthropology</h3>
-<div class="outline-text-3" id="text-org66b80b6">
+<div class="outline-text-3" id="text-org56d0a2c">
 <table>
   <tr>
     <td colspan="3">
@@ -250,7 +250,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </div>
 <div id="outline-container-History" class="outline-3">
 <h3 id="History">History</h3>
-<div class="outline-text-3" id="text-org5306c61">
+<div class="outline-text-3" id="text-org6ac7b8d">
 <table>
   <tr>
     <td colspan="3">
@@ -292,7 +292,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </div>
 <div id="outline-container-Economics-and-Finance" class="outline-3">
 <h3 id="Economics-and-Finance">Economics and Finance</h3>
-<div class="outline-text-3" id="text-org8d9fefb">
+<div class="outline-text-3" id="text-org9197879">
 <table>
   <tr>
     <td colspan="3">
@@ -344,7 +344,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </div>
 <div id="outline-container--American-Class-amp-Culture" class="outline-3">
 <h3 id="-American-Class-amp-Culture">(American) Class &amp; Culture</h3>
-<div class="outline-text-3" id="text-orgb69ef57">
+<div class="outline-text-3" id="text-orgfe5cbb9">
 <table>
   <tr>
     <td colspan="3">
@@ -407,7 +407,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </div>
 <div id="outline-container--Geo-Politics" class="outline-3">
 <h3 id="-Geo-Politics">(Geo)Politics</h3>
-<div class="outline-text-3" id="text-orgcbac8a3">
+<div class="outline-text-3" id="text-org1fbce8f">
 <table>
   <tr>
     <td colspan="3">
@@ -436,7 +436,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </div>
 <div id="outline-container-Personal" class="outline-2">
 <h2 id="Personal">Personal</h2>
-<div class="outline-text-2" id="text-org5108377">
+<div class="outline-text-2" id="text-orgc54a67f">
 <table>
   <tr>
     <td colspan="3">
@@ -488,7 +488,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </div>
 <div id="outline-container-Fiction" class="outline-2">
 <h2 id="Fiction">Fiction</h2>
-<div class="outline-text-2" id="text-org4cab87a">
+<div class="outline-text-2" id="text-org27a9a1e">
 <table>
   <tr>
     <td colspan="3">
