--- a/site-info.html
+++ b/site-info.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-04 Wed 10:13 -->
+<!-- 2024-01-11 Thu 09:38 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Site Info</title>
@@ -71,7 +71,7 @@ My user home directory with SOE has an
 </ul>
 <div id="outline-container-Privacy" class="outline-2">
 <h2 id="Privacy">Privacy</h2>
-<div class="outline-text-2" id="text-org6a6d2b8">
+<div class="outline-text-2" id="text-org8806d36">
 <p>
 I store no information about you whatsoever.
 </p>
@@ -92,7 +92,7 @@ network requests can be tracked anyway (by Cloudflare):
 </div>
 <div id="outline-container-Third-Party-Privacy-Policy" class="outline-2">
 <h2 id="Third-Party-Privacy-Policy">Third-Party Privacy Policy</h2>
-<div class="outline-text-2" id="text-orgd33d06c">
+<div class="outline-text-2" id="text-org660e19f">
 <p>
 By using this site, you are an end user of Cloudflare&rsquo;s services.
 </p>
