--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-12-29 Fri 12:43 -->
+<!-- 2024-01-11 Thu 09:38 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -26,7 +26,7 @@
 <h1 class="title">Reilly Raab</h1>
 </header><div id="outline-container-Pages" class="outline-2">
 <h2 id="Pages">Pages</h2>
-<div class="outline-text-2" id="text-orgd977941">
+<div class="outline-text-2" id="text-org17c217c">
 <p>
 <a href="./site-info.html">Technical Site Info</a> <br>
 <a href="./about.html">About Me</a> <br>
@@ -37,7 +37,7 @@
 </div>
 <div id="outline-container-Notes" class="outline-2">
 <h2 id="Notes">Notes</h2>
-<div class="outline-text-2" id="text-org4730eb4">
+<div class="outline-text-2" id="text-org264a9dd">
 <p>
 <a href="./julia.html">Julia Sets</a> <br>
 <a href="./euler-lagrange.html">Calculus of Variations</a> <br>
@@ -48,7 +48,7 @@
 </div>
 <div id="outline-container-Projects" class="outline-2">
 <h2 id="Projects">Projects</h2>
-<div class="outline-text-2" id="text-orgf9b036b">
+<div class="outline-text-2" id="text-org3dc8368">
 <p>
 <a href="./chess.html">Chess</a> <br>
 <a href="./dark-chess.html">Dark Chess</a> <br>
