--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-11 Thu 09:45 -->
+<!-- 2024-01-11 Thu 19:39 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -52,7 +52,7 @@ table {
   <div>
 
 
-<figure id="org75afa69">
+<figure id="org3c126e3">
 <img src="./img/raab_headshot.jpg" alt="raab_headshot.jpg">
 
 </figure>
@@ -131,12 +131,17 @@ My resume is also available as a <a href="./files/reilly-raab-resume.pdf">PDF</a
 <h2 id="Summary">Summary</h2>
 <div class="outline-text-2" id="text-orge06f1c8">
 <p>
-My current research in machine learning involves the dynamics of multi-agent
-systems and the alignment of local incentives with global objectives. My
-background is in physics, with experience in scientific computing, signal
+I am a PhD candidate in Computer Science and Engineering at UC Santa Cruz, set
+to graduate in March 2024. My doctoral research focuses on aligning local
+incentives with global objectives and constraints in multiagent systems
+involving machine learning.
+</p>
+
+<p>
+My background is in physics, with experience in scientific computing, signal
 processing for quantum systems, and electronics. I spent a few years between
 undergrad and grad school backpacking abroad, remotely developing software
-related to automated circuit design.
+related to automated circuit design. I am actively looking for work.
 </p>
 </div>
 </div>
